--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>barbearia Alura</title>
     </head>
     <body>
-        <h1>Sobre a Barbearia Alura</h1>   
+        <h1 style="text-align: center;">Sobre a Barbearia Alura</h1>   
 
         <P>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</P>
 
