--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head> 
         <meta charset="UTF-8">
         <title>barbearia Alura</title>
+
+        <style> p {text-align: center}
+        </style>
+        
     </head>
     <body>
         <h1 style="text-align: center;">Sobre a Barbearia Alura</h1>   
