--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         </style>
 
     </head>
-    <body>
-        <h1 style="text-align: center; background: #cccccc">Sobre a Barbearia Alura</h1>   
+    <body { background: #cccccc}>
+        <h1 style="text-align: center;">Sobre a Barbearia Alura</h1>   
 
         <P>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</P>
 
