--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head> 
         <meta charset="UTF-8">
         <title>barbearia Alura</title>
+        <link rel="stylesheet" href="style.css">
 
         <style> 
-        p {text-align: center}
+           
         </style>
 
     </head>
-    <body { background: #cccccc}>
+    <body>
         <h1 style="text-align: center;">Sobre a Barbearia Alura</h1>   
 
         <P>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</P>
