--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img id"banner" src="banner.jpg">
+        <img id="banner" src="banner.jpg">
 
         <h1>Sobre a Barbearia Alura</h1>   
 
