--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
         <h2>Benefícios</h2>
+
+        <ul>
+            
+           <li>*Atendimento ao cliente </li> 
+           <li>*Espaço diferenciado </li>  
+           <li>*Localizção </li>
+           <li>*Profissionais qualificados</li> 
+
+        </ul>
+
     </body>
 </html>
