--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <h2>Benefícios</h2>
 
         <ul>
-            
-           <li>*Atendimento ao cliente </li> 
-           <li>*Espaço diferenciado </li>  
-           <li>*Localizção </li>
-           <li>*Profissionais qualificados</li> 
+
+           <li class="itens">Atendimento ao cliente </li> 
+           <li class="itens">Espaço diferenciado </li>  
+           <li class="itens">Localizção </li>
+           <li class="itens">Profissionais qualificados</li> 
 
         </ul>
 
