--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
     <body>
         <img id="banner" src="banner.jpg">
 
-        <h1>Sobre a Barbearia Alura</h1>   
+    <div>
 
-        <P>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</P>
+             <h1>Sobre a Barbearia Alura</h1>   
 
-        <p id="missao" font-size: 20px; text-align: center;"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+             <P>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</P>
 
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+             <p id="missao" font-size: 20px; text-align: center;"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
+             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+             </div>
+
+     <div class="Benefícios">
+        
         <h2>Benefícios</h2>
 
         <ul>
-
-           <li class="itens">Atendimento ao cliente </li> 
-           <li class="itens">Espaço diferenciado </li>  
-           <li class="itens">Localizção </li>
-           <li class="itens">Profissionais qualificados</li> 
-
+             <li class="itens">Atendimento ao cliente </li> 
+             <li class="itens">Espaço diferenciado </li>  
+             <li class="itens">Localizção </li>
+             <li class="itens">Profissionais qualificados</li> 
         </ul>
+
+    </div>
 
     </body>
 </html>
