--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <img id="banner" src="banner.jpg">
 
-    <div>
+    <div class="principal">
 
              <h1>Sobre a Barbearia Alura</h1>   
 
@@ -23,7 +23,7 @@
              </div>
 
      <div class="Benefícios">
-        
+
         <h2>Benefícios</h2>
 
         <ul>
