--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
              <li class="itens">Profissionais qualificados</li> 
         </ul>
 
+        <img src="beficios.jpg">
     </div>
 
     </body>
